fixed z-index

--- a/components/HomePageComponents/ZX9Speaker.module.css
+++ b/components/HomePageComponents/ZX9Speaker.module.css
@@ -44,7 +44,7 @@
 }
 .circles {
   position: absolute;
-  z-index: 100;
+  z-index: 1;
   display: flex;
   top: 0.1%;
   right: 30%;
